# memcore

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp
api/: Dockerfile  go.mod  main.go
api/proto/: flashcards.pb.go  flashcards_grpc.pb.go
core/: grpc_server.cpp  model.h  review_service.cpp  review_service.h  scheduler.cpp  scheduler.h
core/persistence/: storage.cpp  storage.h
core/proto/: flashcards.grpc.pb.cc  flashcards.grpc.pb.h  flashcards.pb.cc  flashcards.pb.h
docs/: architecture.md
docs/daily_logs/: day0_scope.md  day10_grpc.md  day11_go_api.md  day12_end_to_end  day13_integration_testing.md  day14_containerization.md  day15_kubernetes.md  day16_kubernetes_multiContainer.md  day1_architecture.md  day2_api_contract.md  day3_grpc_decision.md  day4_sm2_scheduler.md  day5_architecture_design.md  day6_core_engine.md  day7_service_layer.md  day8_persistence.md  day9_persistence_testing.md
k8s/: memcore-pod.yaml
proto/: flashcards.proto
